part3/3.09/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hashgenerator
  name: hashgenerator
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hashgenerator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      containers:
        - image: lnsth/logoutput:exercise_3.02
          imagePullPolicy: Always
          name: logoutput
          resources:
            requests:
              memory: "200Mi"
              cpu: "125m"
            limits:
              memory: "400Mi"
              cpu: "250m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: pingpong
          image: lnsth/pingpong:exercise_3.02
          imagePullPolicy: Always
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
            limits:
              memory: "500Mi"
              cpu: "250m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
