part3/3.09/manifests/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: applications
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: applications
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "postgres-volume"
              subPath: postgres
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pvc
